Appel et retour de fonction, affectation du resultat geré